# Misc-Python-Packaging-Tutorial

./: .gitignore  AGENTS.md  README.md  pyproject.toml
src/: main.py
src/examples_pkg/: __init__.py
src/examples_pkg/subpkg1/: __init__.py  module1.py
src/examples_pkg/subpkg2/: __init__.py  module2.py
src/pkg/: __init__.py  a.py  b.py
tests/: test_examples_pkg_init.py
