[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pkg-resolution-exploration"
version = "0.1.0"
description = "Exploration of Python module/package resolution"
authors = [
    { name = "N/A", email = "not@applicable.com" }
]
readme = ""
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
dev = ["ipython", "pytest"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
